fix: solve text overflow from input area

--- a/type-frontend/src/App.css
+++ b/type-frontend/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'JetBrains Mono', monospace;
-  background-color: #2C2D30;
+  background-color: #2c2c2c;
   color: #d1d0c5;
 }
 
@@ -141,6 +141,7 @@ body {
   border: 1px solid #ca4754;
   display: flex;
   flex-direction: column;
+  margin-bottom: 80px;
 } 
 
 .AiCoachCard-errormessage {
@@ -405,6 +406,7 @@ body {
 .typing-area {
   flex: 1 1 auto;
   min-width: 0;
+  overflow-wrap: break-word;
 
   margin-top: 40px;
   padding: 20px;
@@ -428,7 +430,8 @@ body {
   gap: 12px;
   color: #e2b714;
   font-family: inherit;
-  padding: 20px;
+  padding: 2px;
+  margin-top: -100px;
 }
 
 .loading-icon {
